--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
-name = "npl_utils"
+name = "msf60_utils"
 version = "0.3.1"
 edition = "2021"
 authors = [ "René Ladan <rene0+github@freedom.nl>" ]
 license = "MIT OR Apache-2.0"
 repository = "https://github.com/rene0/npl_utils"
-description = "NPL receiver for embedded platforms."
+description = "MSF receiver for embedded platforms."
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
